<?xml version="1.0" encoding="utf-8"?>

<GridLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:rowCount="8"
    android:columnCount="9">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b01"
        android:id="@+id/button2"
        android:layout_row="0"
        android:layout_column="1"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b00"
        android:id="@+id/button"
        android:layout_row="0"
        android:layout_column="0"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b02"
        android:id="@+id/button4"
        android:layout_row="0"
        android:layout_column="2"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b03"
        android:id="@+id/button3"
        android:layout_row="0"
        android:layout_column="3"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b04"
        android:id="@+id/button5"
        android:layout_row="0"
        android:layout_column="4"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b11"
        android:id="@+id/button2"
        android:layout_row="1"
        android:layout_column="1"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b10"
        android:id="@+id/button"
        android:layout_row="1"
        android:layout_column="0"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b12"
        android:id="@+id/button4"
        android:layout_row="1"
        android:layout_column="2"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b13"
        android:id="@+id/button3"
        android:layout_row="1"
        android:layout_column="3"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b14"
        android:id="@+id/button5"
        android:layout_row="1"
        android:layout_column="4"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b21"
        android:id="@+id/button2"
        android:layout_row="2"
        android:layout_column="1"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b20"
        android:id="@+id/button"
        android:layout_row="2"
        android:layout_column="0"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b22"
        android:id="@+id/button4"
        android:layout_row="2"
        android:layout_column="2"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b23"
        android:id="@+id/button3"
        android:layout_row="2"
        android:layout_column="3"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b24"
        android:id="@+id/button5"
        android:layout_row="2"
        android:layout_column="4"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/texto"
        android:id="@+id/textView"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="9"
        android:layout_rowSpan="4"/>
</GridLayout>